--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,18 @@
 [tox]
 minversion = 1.8
-envlist = {py27,py32,py33,py34,py35,py36}-{plain,hiredis}, pep8
+envlist = {py27,py32,py33,py34,py35,py36}-{plain,hiredis}, pycodestyle
 
 [testenv]
 deps =
     pytest==2.9.2
     mock==2.0.0
     hiredis: hiredis >= 0.1.3
+    redis >= 2.10.0
 commands = py.test {posargs}
 
-[testenv:pep8]
+[testenv:pycodestyle]
 basepython = python2.7
-deps = pep8
-commands = pep8
+deps = pycodestyle
+commands = pycodestyle
 skipsdist = true
 skip_install = true
