--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ deps =
     pytest==2.9.2
     mock==2.0.0
     hiredis: hiredis >= 0.1.3
-    redis >= 2.10.0
+    redis: redis >= 2.10.0
 commands = py.test {posargs}
 
 [testenv:pycodestyle]
