--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,12 @@
 [tox]
 minversion = 1.8
-envlist = {py27,py32,py33,py34,py35,py36}-{plain,hiredis}, pycodestyle
+envlist = {py27,py32,py33,py34,py35,py36}-{plain}, pycodestyle
 
 [testenv]
 deps =
     pytest==2.9.2
     mock==2.0.0
-    hiredis: hiredis >= 0.1.3
-    redis: redis >= 2.10.0
+    redis >= 2.10.0
 commands = py.test {posargs}
 
 [testenv:pycodestyle]
